--- a/MVC3Bootstrap/Views/Account/LogOn.cshtml
+++ b/MVC3Bootstrap/Views/Account/LogOn.cshtml
@@ -41,7 +41,7 @@
             </div>
 
             <p>
-                <input type="submit" value="Log On" />
+                <input class="btn btn-primary" type="submit" value="Log On" />
             </p>
         </fieldset>
     </div>
