--- a/MVC3Bootstrap/Views/Account/Register.cshtml
+++ b/MVC3Bootstrap/Views/Account/Register.cshtml
@@ -54,7 +54,7 @@
             </div>
 
             <p>
-                <input type="submit" value="Register" />
+                <input class="btn btn-primary" type="submit" value="Register" />
             </p>
         </fieldset>
     </div>
