--- a/MVC3Bootstrap/Views/Home/About.cshtml
+++ b/MVC3Bootstrap/Views/Home/About.cshtml
@@ -9,20 +9,20 @@
     <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, 
        tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. 
        Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-    <p><a class="btn" href="#">View details »</a></p>
+    <p><a class="btn btn-primary" href="#">View details »</a></p>
 </div>
 <div class="span4">
     <h2>About 2</h2>
     <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, 
       tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. 
       Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-    <p><a class="btn" href="#">View details »</a></p>
+    <p><a class="btn btn-warning" href="#">View details »</a></p>
 </div>
 <div class="span4">
     <h2>About 3</h2>
     <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. 
        Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, 
        tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-    <p><a class="btn" href="#">View details »</a></p>
+    <p><a class="btn btn-success" href="#">View details »</a></p>
 </div>
 </div>
