--- a/MVC3Bootstrap/Views/Shared/_Layout.cshtml
+++ b/MVC3Bootstrap/Views/Shared/_Layout.cshtml
@@ -21,8 +21,8 @@
             <div class="navbar">
                     <div class="navbar-inner">
                         <div class="container-fluid">
-                            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                            </a><a class="brand" href="http://www.mysite.org">My Demo App</a>
+                            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"></a>
+                            <!--<a class="brand" href="http://www.agilecrafts.com">Home</a>-->
                             <div class="nav-collapse">
                                 <ul class="nav">
                                     <li class="@(ViewBag.Active == "Home" ? "active" : "")">
